fix header z-index

--- a/css/w3zker.css
+++ b/css/w3zker.css
@@ -131,6 +131,7 @@ header .burger_menu_wrapper.active {
     position: fixed;
     top: 0;
     left: 0;
+    z-index: 10000;
     width: 100vw;
     height: 100vh;
     background: #EDEBF7;
